[package]
name = "sorting_algos"
version = "0.1.0"
edition = "2021"
default-run = "sorting_algos"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
indicatif = "0.17.11"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
